# pako

./: .gitignore  CONTRIBUTING.md  Cargo.toml  LICENSE-MIT  Pako.md  README.md
.github/workflows/: ci.yml
crates/pako-build/: Cargo.toml
crates/pako-build/src/: archive.rs  builder.rs  logging.rs  main.rs  publisher.rs  recipe.rs  sandbox.rs  tuf.rs
crates/pako-build/src/recipe/: format.rs
crates/pako-build/src/recipe/format/: normalize.rs  tests.rs
crates/pako-cli/: Cargo.toml
crates/pako-cli/src/: cli.rs  commands.rs  main.rs  output.rs  repository.rs
crates/pako-core/: Cargo.toml
crates/pako-core/src/: canonical.rs  chunking.rs  digest.rs  error.rs  installer.rs  integrations.rs  layout.rs  lib.rs  lock.rs  manifest.rs  materialize.rs  object_store.rs  pack.rs  path.rs  payload.rs  planner.rs  receipt.rs  transaction.rs  verify.rs
crates/pako-log/: Cargo.toml
crates/pako-log/src/: lib.rs
crates/pako-oci/: Cargo.toml
crates/pako-oci/src/: client.rs  lib.rs  reference.rs  types.rs
crates/pako-test-support/: Cargo.toml
crates/pako-test-support/src/: lib.rs
crates/pako-trust/: Cargo.toml
crates/pako-trust/src/: lib.rs
dev/: README.md  compose.yml  nginx.conf
docs/: Pako.md  RECIPE_FORMAT.md
examples/hello-local/: recipe.toml
examples/hello-local/payload/: hello-pako
examples/intellij-idea/: recipe.toml
examples/source-build/: build.sh  recipe.toml
xtask/: Cargo.toml
xtask/src/: context.rs  dev.rs  main.rs  process.rs
