[package]
name = "pako-log"
description = "Shared file and terminal logger for Pako binaries"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
anyhow.workspace = true
indicatif.workspace = true
log.workspace = true

[lints]
workspace = true
