[package]
name = "pako-oci"
description = "OCI Distribution API client for Pako"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
anyhow.workspace = true
async-trait.workspace = true
base64.workspace = true
bytes.workspace = true
futures-util.workspace = true
pako-core = { path = "../pako-core" }
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
tokio.workspace = true
url.workspace = true

[lints]
workspace = true
