[package]
name = "pako-test-support"
description = "Test fixtures for Pako"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
pako-core = { path = "../pako-core" }
tempfile.workspace = true

[lints]
workspace = true
